# PandaChess

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
engine/: .clang-format  .gitattributes  CMakeLists.txt  README.md  attacks.cpp  attacks.h  bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  search.cpp  search.h  stockfish-18  tt.cpp  tt.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
engine/nnue/: panda_nnue.cpp  panda_nnue.h  stockfish_shims.cpp
engine/tests/: CMakeLists.txt  test_board.cpp  test_eval.cpp  test_movegen.cpp  test_nnue.cpp  test_search.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChessBoard.css  ChessBoard.jsx  EvalBar.css  EvalBar.jsx  InfoPanel.css  InfoPanel.jsx  SetupScreen.css  SetupScreen.jsx
